--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -1,5 +1,5 @@
 // Quasar SCSS (& Sass) Variables
-// --------------------------------------------------
+// $$$$$$$$$$$$$$$$$$$$$$$$$
 // To customize the look and feel of this app, you can override
 // the Sass/SCSS variables found in Quasar's source Sass/SCSS files.
 
@@ -23,3 +23,10 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+$dark_marine_blue: #0d1428;
+$dark_grey: #2d2f39;
+$red: #ed1c24;
+$light_blue: #27a9e1;
+$yellow: #fecf08;
+$white: #ffffff;
