update payment types social

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -21,6 +21,7 @@ $light_background: #FFF6CE;
 $light_blue: #27a9e1;
 $yellow: #fecf08;
 $white: #ffffff;
+$bright_saffron: #FDD93B;
 
 $primary   : $dark_red;
 $secondary : $light_blue;
@@ -30,5 +31,5 @@ $dark      : #1d1d1d;
 
 $positive  : $green;
 $negative  : $red;
-$info      : $light_blue;
-$warning   : orange;
+$info      : $bright_saffron;
+$warning   : $bright_saffron;
