--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,6 @@
 // app global css in SCSS form
 @import "../assets/fonts/luckiest-guy/luckiest-guy.css";
-
+//@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 .pointer {
   cursor: pointer;
 }
